[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.2.8",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs~=3.0.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "requests>=2.31.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.1",
    "web3>=6.0.0",
    "eth-account>=0.8.0",
]

[project.optional-dependencies]
polymarket = [
    "py-clob-client>=0.13.0,<1; sys_platform != 'win32'",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
